--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch"
   },
   "dependencies": {
     "next": "12.1.0",
@@ -14,13 +15,18 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
     "@types/node": "17.0.18",
     "@types/react": "17.0.39",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
+    "babel-jest": "^27.5.1",
     "eslint": "8.9.0",
     "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-next": "12.1.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.5.1",
     "typescript": "4.5.5"
   }
 }
