--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "docker": "docker build -t fe-fastcampus .",
+    "dockert:start": "docker run -p 3000:3000 fe-fastcampus"
+    
   },
   "dependencies": {
     "next": "12.1.0",
